@@ -4,10 +4,10 @@ Bot::IRC::X::Feeds - Bot::IRC plugin to watch and notify on changes in RSS feeds
 
 # VERSION
 
-version 1.04
+version 1.05
 
-[![Build Status](https://travis-ci.org/gryphonshafer/Bot-IRC-X-Feeds.svg)](https://travis-ci.org/gryphonshafer/Bot-IRC-X-Feeds)
-[![Coverage Status](https://coveralls.io/repos/gryphonshafer/Bot-IRC-X-Feeds/badge.png)](https://coveralls.io/r/gryphonshafer/Bot-IRC-X-Feeds)
+[![build](https://github.com/gryphonshafer/Bot-IRC-X-Feeds/workflows/build/badge.svg)](https://github.com/gryphonshafer/Bot-IRC-X-Feeds/actions?query=workflow%3Abuild)
+[![codecov](https://codecov.io/gh/gryphonshafer/Bot-IRC-X-Feeds/graph/badge.svg)](https://codecov.io/gh/gryphonshafer/Bot-IRC-X-Feeds)
 
 # SYNOPSIS
 
@@ -17,7 +17,7 @@ version 1.04
         connect => { server => 'irc.perl.org' },
         plugins => ['Feeds'],
         vars    => {
-            x-feeds => {
+            'x-feeds' => {
                 interval => 10,
                 max_per  => 5,
             }
@@ -26,14 +26,14 @@ version 1.04
 
 # DESCRIPTION
 
-This [Bot::IRC](https://metacpan.org/pod/Bot::IRC) plugin adds functionality so bots can watch and notify on
+This [Bot::IRC](https://metacpan.org/pod/Bot%3A%3AIRC) plugin adds functionality so bots can watch and notify on
 changes in RSS feeds. You can tell the bot to start following feeds.
 
     bot feed add URL [FORUMS]
 
 You can optionally provide a "FORUMS" string, which is a list of channels the
 bot should report on for the feed. By default, the bot reports on all channels
-it has joined. (Requires the [Bot::IRC::Join](https://metacpan.org/pod/Bot::IRC::Join) plugin.) The list of channels
+it has joined. (Requires the [Bot::IRC::Join](https://metacpan.org/pod/Bot%3A%3AIRC%3A%3AJoin) plugin.) The list of channels
 must be comma-delimited with no spaces.
 
 You can list the feeds the bot is following:
@@ -56,7 +56,7 @@ Setting the `x-feeds` values allows for configuration.
         connect => { server => 'irc.perl.org' },
         plugins => ['Feeds'],
         vars    => {
-            x-feeds => {
+            'x-feeds' => {
                 interval => 10,
                 max_per  => 5,
             }
@@ -74,13 +74,11 @@ The default values for all are shown in the example above.
 
 You can look for additional information at:
 
-- [Bot::IRC](https://metacpan.org/pod/Bot::IRC)
+- [Bot::IRC](https://metacpan.org/pod/Bot%3A%3AIRC)
 - [GitHub](https://github.com/gryphonshafer/Bot-IRC-X-Feeds)
-- [CPAN](http://search.cpan.org/dist/Bot-IRC-X-Feeds)
 - [MetaCPAN](https://metacpan.org/pod/Bot::IRC::X::Feeds)
-- [AnnoCPAN](http://annocpan.org/dist/Bot-IRC-X-Feeds)
-- [Travis CI](https://travis-ci.org/gryphonshafer/Bot-IRC-X-Feeds)
-- [Coveralls](https://coveralls.io/r/gryphonshafer/Bot-IRC-X-Feeds)
+- [GitHub Actions](https://github.com/gryphonshafer/Bot-IRC-X-Feeds/actions)
+- [Codecov](https://codecov.io/gh/gryphonshafer/Bot-IRC-X-Feeds)
 - [CPANTS](http://cpants.cpanauthors.org/dist/Bot-IRC-X-Feeds)
 - [CPAN Testers](http://www.cpantesters.org/distro/T/Bot-IRC-X-Feeds.html)
 
@@ -90,7 +88,7 @@ Gryphon Shafer <gryphon@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2018 by Gryphon Shafer.
+This software is copyright (c) 2021 by Gryphon Shafer.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
