@@ -1,6 +1,8 @@
 Revision history for Bot::IRC::X::Feeds
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
         - Update Travis YAML
 
 1.04      2019-05-06 17:05:04-07:00 America/Los_Angeles
